[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "pmarket_slack"
version = "0.1.0"
description = "play-money prediction market app on Slack"
authors = [{"name" = "khang200923"}]
dependency = ["patchelf>=0.17"]
requires-python = ">=3.10"

[tool.maturin]
bindings = "pyo3"